--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <span>( ͡° ͜ʖ ͡°)</span>
            
         </div>
-        <div class="btnContainer"><button>set the clock</button>
+        <div class="btnContainer"><button>Set the clock!</button>
+            <button class="realTimeButton">Computer time</button>
         </div>
     </div> 
     <script src="main.js"></script>
