--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <input pattern="[0-9]*" id="hour" type="number" maxlength="2" min="0" max="12" placeholder="Hours">
         </div>
         <div class="spanContainer">
-            <span>( ͡° ͜ʖ ͡°)</span>
+            <span></span>
            
         </div>
         <div class="btnContainer"><button>Set the clock!</button>
