class name change

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="underClock"></div>
         <div class="clock">
             <div class="circle"></div>
-            <div class="godzina"></div>
-            <div class="minuta"></div>
-            <div class="sekunda"></div>
+            <div class="hour"></div>
+            <div class="minute"></div>
+            <div class="second"></div>
             <ul>
                 <li><span>1</span></li>
                 <li><span>2</span></li>
