design change, add mobile media

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="scss/style.css">
 </head>
+
 <body>
     <div class="clockContainer">
         <div class="underClock"></div>
@@ -29,12 +31,14 @@
                 <li><span>11</span></li>
                 <li><span>12</span></li>
             </ul>
-            <div class="digitalFrame">           
-                <span class="digital">00:00:<span style="color: red; font-size: 15px;">00</span></span>
+            <div class="digital-time-box">
+                <span class="digital-hour-min">00:00:</span>
+                <span class="digital-seconds">00</span>
             </div>
             <span class="logo">WOITI</span>
         </div>
     </div>
     <script src="main.js"></script>
 </body>
+
 </html>
