design change, add mobile media

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="clockContainer">
         <div class="underClock"></div>
         <div class="clock">
-            <div class="circle"></div>
+            <div class="middle-circle"></div>
             <div class="hour"></div>
             <div class="minute"></div>
             <div class="second"></div>
